--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 		<meta charset="UTF-8"/>
 		<title>•KırmızıKoltuk•</title>
 		<link href="stil.css" rel="stylesheet" type="text/css">
+        <link href="fonts.css" rel="stylesheet" type="text/css">
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:300' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="fonts.css">
+		
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
      <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
