--- a/index.html
+++ b/index.html
@@ -4,7 +4,85 @@
 		<meta charset="UTF-8"/>
 		<title>•KırmızıKoltuk•</title>
 		<link href="stil.css" rel="stylesheet" type="text/css">
-        <link href="fonts.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+                @font-face {
+            font-family: 'icomoon';
+            src:url('fonts/icomoon.eot?-kuh6an');
+            src:url('fonts/icomoon.eot?#iefix-kuh6an') format('embedded-opentype'),
+                url('fonts/icomoon.woff?-kuh6an') format('woff'),
+                url('fonts/icomoon.ttf?-kuh6an') format('truetype'),
+                url('fonts/icomoon.svg?-kuh6an#icomoon') format('svg');
+            font-weight: normal;
+            font-style: normal;
+        }
+
+        [class^="icon-"], [class*=" icon-"] {
+            font-family: 'icomoon';
+            speak: none;
+            font-style: normal;
+            font-weight: normal;
+            font-variant: normal;
+            text-transform: none;
+            line-height: 1;
+
+            /* Better Font Rendering =========== */
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+        }
+
+        .icon-facebook:before {
+            content: "\e600";
+            padding-left: 5px;
+        }
+
+        .icon-home:before {
+            content: "\e900";
+        }
+
+        .icon-images:before {
+            content: "\e90e";
+        }
+
+        .icon-price-tag:before {
+            content: "\e935";
+        }
+
+        .icon-cart:before {
+            content: "\e93a";
+        }
+
+        .icon-paragraph-left:before {
+            content: "\ea77";
+        }
+
+        .icon-google-plus:before {
+            content: "\ea88";
+            padding-left: 5px;
+        }
+
+        .icon-instagram:before {
+            content: "\ea90";
+            padding-left: 5px;
+        }
+
+        .icon-twitter:before {
+            content: "\ea91";
+            padding-left: 5px;
+
+        }
+
+        .icon-youtube3:before {
+            content: "\ea99";
+            padding-left: 5px;
+        }
+
+        .icon-tumblr:before {
+            content: "\eabb";
+        }
+
+
+        </style>
+
 		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans:300' rel='stylesheet' type='text/css'>
 		
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
